// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollSyncColumn should render its default content 1`] = `
<div
  className=""
  style={
    Object {
      "flex": "0 0 150px",
      "width": "150px",
    }
  }
/>
`;

exports[`ScrollSyncColumn should render the given children 1`] = `
<div
  className=""
  style={
    Object {
      "flex": "0 0 150px",
      "width": "150px",
    }
  }
>
  <div>
    Child component
  </div>
</div>
`;

exports[`ScrollSyncColumn should use the given width and class name 1`] = `
<div
  className="a-class-name"
  style={
    Object {
      "flex": "0 0 200px",
      "width": "200px",
    }
  }
/>
`;
